[gd_scene load_steps=7 format=3 uid="uid://bcx4kwpx7o8c5"]

[ext_resource type="Script" path="res://scripts/entities/Player.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/entities/Watcher.gd" id="2_watcher"]
[ext_resource type="Script" path="res://scripts/entities/Stalker.gd" id="3_stalker"]
[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="4_hud"]

[sub_resource type="Environment" id="Environment_1a2b3"]
background_mode = 1
background_color = Color(0.05, 0.05, 0.1, 1)
ambient_light_source = 2
ambient_light_color = Color(0.2, 0.2, 0.3, 1)
ambient_light_energy = 0.3

[sub_resource type="CameraAttributes" id="CameraAttributes_1a2b3"]
exposure_sensitivity = 50.0

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1a2b3")
camera_attributes = SubResource("CameraAttributes_1a2b3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 0.1
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2, 4)
script = ExtResource("1_player")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = CapsuleMesh.new()

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = CapsuleShape3D.new()

[node name="Camera3D" type="Camera3D" parent="Player"]
fov = 75.0

[node name="Flashlight" type="SpotLight3D" parent="Player/Camera3D"]
light_energy = 2.0
light_indirect_energy = 0.5
spot_range = 20.0
spot_angle = 45.0

[node name="FlashlightMesh" type="MeshInstance3D" parent="Player/Camera3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.3, 0.3, -0.2, -0.5)
mesh = CylinderMesh.new()

[node name="Entities" type="Node3D" parent="."]

[node name="Watcher" type="Node3D" parent="Entities" groups=["watcher"]]
script = ExtResource("2_watcher")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Entities/Watcher"]
mesh = SphereMesh.new()

[node name="Area3D" type="Area3D" parent="Entities/Watcher"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Entities/Watcher/Area3D"]
shape = SphereShape3D.new()

[node name="DespawnTimer" type="Timer" parent="Entities/Watcher"]

[node name="Stalker" type="CharacterBody3D" parent="Entities" groups=["stalker"]]
script = ExtResource("3_stalker")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Entities/Stalker"]
mesh = CapsuleMesh.new()

[node name="CollisionShape3D" type="CollisionShape3D" parent="Entities/Stalker"]
shape = CapsuleShape3D.new()

[node name="DetectionArea" type="Area3D" parent="Entities/Stalker"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Entities/Stalker/DetectionArea"]
shape = SphereShape3D.new()

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Entities/Stalker"]

[node name="MazeContainer" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI" groups=["ui_manager"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4_hud")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 300.0
grow_vertical = 0

[node name="SanityContainer" type="HBoxContainer" parent="UI/HUD/VBoxContainer"]
layout_mode = 2

[node name="SanityLabel" type="Label" parent="UI/HUD/VBoxContainer/SanityContainer"]
layout_mode = 2
text = "Sanity:"

[node name="SanityBar" type="ProgressBar" parent="UI/HUD/VBoxContainer/SanityContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="CounterContainer" type="HBoxContainer" parent="UI/HUD/VBoxContainer"]
layout_mode = 2

[node name="WeirdCounter" type="Label" parent="UI/HUD/VBoxContainer/CounterContainer"]
layout_mode = 2
text = "Weird Findings: 0"

[node name="FlashlightContainer" type="HBoxContainer" parent="UI/HUD/VBoxContainer"]
layout_mode = 2

[node name="FlashlightLabel" type="Label" parent="UI/HUD/VBoxContainer/FlashlightContainer"]
layout_mode = 2
text = "Battery:"

[node name="BatteryBar" type="ProgressBar" parent="UI/HUD/VBoxContainer/FlashlightContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="MessageOverlay" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageText" type="Label" parent="UI/HUD/MessageOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="UI/HUD"]
